feat: add api annotations favorites
